Tried adding .hic conversion using hictk
